--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "azure-storage": "^2.1.0",
     "body-parser": "^1.20.2",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "guid": "^0.0.12",
     "http": "^0.0.1-security",
-    "mongoose": "^7.0.1"
+    "md5": "^2.3.0",
+    "mongoose": "^7.0.1",
+    "sendgrid": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
