--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "guid": "^0.0.12",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^7.4.0",
     "md5": "^2.3.0",
     "mongoose": "^7.0.1",
     "sendgrid": "^2.0.0"
